[package]
name = "flv-util"
version = "0.5.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "utilies for Fluvio projects"
repository = "https://github.com/infinyon/flv-future"
edition = "2018"
license = "Apache-2.0"

[features]
fixture = []
subscriber = ["tracing-subscriber"]

[dependencies]
tracing = "0.1.0"
tracing-subscriber = { version = "0.2.0", optional = true }
